--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
 						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
@@ -61,7 +60,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo La panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence de Web design La Panthère
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -77,7 +76,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="titre" src="img/title.png" />
+				<h2 class="text-center ">
+					Nous sommes une agence de web design qui aide<br>les entreprises à devenir attractives et visibles sur internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -117,8 +118,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="citation" src="img/citation.png" />
-
+				<q>L'agence La Panthère est une excellente agence web! Les<br>
+					web designers ont réussi à capturer l'essence de notre<br>
+					entreprise et à l'intégrer à notre site. Cela nous à aidé à<br>
+					doubler nos ventes en ligne à Lyon.</q>
+				<p>Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>
 		</div>
 	</div>
@@ -147,7 +151,9 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="titre2" src="img/title2.png" />
+				<h2 class="text-center ">
+					Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -274,8 +280,6 @@
 							<li><a href="liensagogo.com">liensagogo.com</a></li>
 							<li><a href="backlink.com">backlink.com</a></li>
 							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
 					</div>
 				</div>
